# scf-simple

./: .gitignore  README.md
dotnet/: dotnet.sln
dotnet/src/MyDotey.SCF.Simple/: MyDotey.SCF.Simple.csproj
dotnet/src/MyDotey.SCF.Simple/Facade/: StringProperties.cs  StringPropertySources.cs  StringValueProperties.cs
dotnet/src/MyDotey.SCF.Simple/Filter/: PipelineValueFilter.cs
dotnet/src/MyDotey.SCF.Simple/Source/: NullConfigurationSource.cs
dotnet/src/MyDotey.SCF.Simple/Source/StringProperty/: StringPropertyConfigurationSource.cs
dotnet/src/MyDotey.SCF.Simple/Threading/: TaskExecutor.cs
dotnet/src/MyDotey.SCF.Simple/Type/: DictionaryComparator.cs  ListComparator.cs
dotnet/src/MyDotey.SCF.Simple/Type/String/: StringInplaceConverter.cs  StringToBooleanConverter.cs  StringToByteConverter.cs  StringToDecimalConverter.cs  StringToDictionaryConverter.cs  StringToDoubleConverter.cs  StringToFloatConverter.cs  StringToIntConverter.cs  StringToListConverter.cs  StringToLongConverter.cs  StringToSByteConverter.cs  StringToShortConverter.cs  StringToTypeConverter.cs  StringToUIntConverter.cs  StringToULongConverter.cs  StringToUShortConverter.cs
dotnet/test/MyDotey.SCF.Simple.Tests/: MyDotey.SCF.Simple.Tests.csproj  appsettings.json  test.properties
dotnet/test/MyDotey.SCF.Simple.Tests/Facade/: StringPropertiesTest.cs
dotnet/test/MyDotey.SCF.SimpleTest/Facade/: StringPropertiesTest.cs
java/: README.md  pom.xml  test.properties
java/src/main/java/org/mydotey/scf/facade/: StringProperties.java  (+3 more)
java/src/test/resources/: test.properties
rust/: Cargo.toml
(+40 files in other folders)
